Still trying to fix twitter feed issue; broken on mobile iOS

--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -111,7 +111,6 @@ section h2 {
 #twitter-feed iframe {
     display: block !important;
     margin: 0 auto !important;
-    height: 400px !important;
     width: 60% !important;
     overflow: hidden;
 }
@@ -124,7 +123,6 @@ section h2 {
 
 /* Tablet size */ 
 @media screen and (max-width: 768px) {
-
     .content-box {
         width: 100%;
     }
@@ -141,7 +139,6 @@ section h2 {
     }
     
     #twitter-feed iframe {
-        height: 350px !important;
         width: 80% !important;
     }
 }
